syntax = "proto3";

option go_package = "/pb";

package vote_service;

message ExchangeRequest {
	string coin_name = 1;
	float value = 2;
}

message ExchangeResponse {
	float balance = 1;
}

message CoinExchangeRequest {
	string coin_name = 1;
}

message CoinExchangeResponse {
	string coin_name = 1;
	float price_USDT = 2;
	float day_rate = 3;
}

service ExchangeService {
	rpc Exchange (ExchangeRequest) returns (ExchangeResponse){}

	rpc Coin (stream CoinExchangeRequest) returns (stream CoinExchangeResponse) {}
}

